# Chess

./: CMakeLists.txt  CMakePresets.json  README.md
headers/: Application.h  BitBoard.h  BitMasks.h  Buffers.h  ChessBoard.h  ChessEngine.h  UCIconnect.h  Window.h
headers/engine/: ChessEngine.h  TT.h  UCIconnect.h
headers/gui/: Application.h  Buffers.h  Shaders.h
headers/magic bitboard/: BitMasks.h  Board.h  misc.h
libs/glad/: glad.c
libs/include/GLAD/: glad.h
src/: Application.cpp  BitBoard.cpp  BitMasks.cpp  ChessBoard.cpp  ChessEngine.cpp  Main.cpp  MainUCI.cpp  MainUI.cpp  UCIconnect.cpp
src/engine/: ChessEngine.cpp  TT.cpp  UCIconnect.cpp
src/gui/: Application.cpp  Buffers.cpp  Shaders.cpp  Window.cpp
src/magic bitboard/: BitMasks.cpp  Board.cpp  misc.cpp
src/opengl/: Buffers.cpp  Shaders.cpp  Window.cpp
